--- a/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
@@ -48,7 +48,7 @@
                     <div class="d-flex">
                         <div class="col">
                             <label>Matéria Prima</label>
-                            <p-editor [ngModel]="'<p>'+this.propService.step1.checkbox1 + '</p><p>' + this.propService.step1.checkbox2 + '</p><p>' + this.propService.step1.checkbox3+ '</p>' + this.propService.step1.editor1" [style]="editorStyle" [readonly]="true" >
+                            <p-editor [ngModel]="'<p>'+this.propService.propSolution.lackMaterials + '</p><p>' + this.propService.propSolution.lowQualityMaterials + '</p>' + this.propService.propSolution.materialDescription" [style]="editorStyle" [readonly]="true" >
                                 <ng-template pTemplate="header">
                                 </ng-template>
                             </p-editor>
@@ -56,14 +56,14 @@
                         </div>
                         <div class="col">
                             <label>Medição</label>
-                            <p-editor [ngModel]="'<p>'+this.propService.step1.checkbox4 + '</p><p>' + this.propService.step1.checkbox5 + '</p><p>' + this.propService.step1.checkbox6+ '</p>' + this.propService.step1.editor2" [style]="editorStyle" [readonly]="true">
+                            <p-editor [ngModel]="'<p>'+this.propService.propSolution.lackParameters + '</p><p>' + this.propService.propSolution.excessParameters + '</p><p>' + this.propService.propSolution.nonAchievementGoals+ '</p>' + this.propService.propSolution.lowQualityMaterials + '</p>' + this.propService.propSolution.measurementDescription" [style]="editorStyle" [readonly]="true">
                                 <ng-template pTemplate="header">
                                 </ng-template>
                             </p-editor>
                         </div>
                         <div class="col">
                             <label>Método</label>
-                            <p-editor [ngModel]="this.propService.step1.editor3" [style]="editorStyle" [readonly]="true">
+                            <p-editor [ngModel]="this.propService.propSolution.methodDescription" [style]="editorStyle" [readonly]="true">
                                 <ng-template pTemplate="header">
                                 </ng-template>
                             </p-editor>
@@ -73,21 +73,21 @@
                     <div class="d-flex">
                         <div class="col">
                             <label>Mão de Obra</label>
-                            <p-editor [ngModel]="'<p>'+this.propService.step1.checkbox7 + '</p>' + this.propService.step1.editor4" [style]="editorStyle" [readonly]="true">
+                            <p-editor [ngModel]="'<p>'+this.propService.propSolution.runTraining + '</p>' + this.propService.propSolution.manPowerDescription" [style]="editorStyle" [readonly]="true">
                                 <ng-template pTemplate="header">
                                 </ng-template>
                             </p-editor>
                         </div>
                         <div class="col">
                             <label>Meio Ambiente</label>
-                            <p-editor [ngModel]="this.propService.step1.editor5" [style]="editorStyle" [readonly]="true">
+                            <p-editor [ngModel]="this.propService.propSolution.environmentDescription"[style]="editorStyle" [readonly]="true">
                                 <ng-template pTemplate="header">
                                 </ng-template>
                             </p-editor>
                         </div>
                         <div class="col">
                             <label>Máquina</label>
-                            <p-editor [ngModel]="this.propService.step1.editor6" [style]="editorStyle" [readonly]="true">
+                            <p-editor [ngModel]="this.propService.propSolution.machineDescription"[style]="editorStyle" [readonly]="true">
                                 <ng-template pTemplate="header">
                                 </ng-template>
                             </p-editor>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="d-block mt-5">
                     <label>Efeito</label>
-                    <p-editor [ngModel]="this.propService.step1.editor7"
+                    <p-editor [ngModel]="this.propService.propSolution.effectDescription"
                               [style]="{'height':'300px','width':'230px','border': '2px solid #333333','border-radius': '5px'}"
                               [readonly]="true">
                         <ng-template pTemplate="header">
@@ -125,10 +125,10 @@
                 <div class="d-flex justify-content-evenly">
                     <p-chip>1</p-chip>
                     <div>
-
-                       <textarea  [(ngModel)]="propService.step2.textAreas[0]" pInputTextarea cols="35" rows="5" class="textarea">
+8
+                       <textarea  [(ngModel)]="propService.propSolution.firstWhy" pInputTextarea cols="35" rows="5" class="textarea">
                        </textarea>
-                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.step2.selectedValue=='cause1'">
+                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.rootCause=='cause1'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
                             <label class="form-check-label text-light">
                                 Causa Raiz
@@ -137,9 +137,9 @@
                     </div>
                     <p-chip>2</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.step2.textAreas[0]" pInputTextarea cols="35" rows="5" class="textarea">
+                       <textarea  [(ngModel)]="propService.propSolution.secondWhy" pInputTextarea cols="35" rows="5" class="textarea">
                        </textarea>
-                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.step2.selectedValue=='cause2'">
+                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.rootCause=='cause2'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
                             <label class="form-check-label text-light">
                                 Causa Raiz
@@ -148,9 +148,9 @@
                     </div>
                     <p-chip>3</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.step2.textAreas[0]" pInputTextarea cols="35" rows="5" class="textarea">
+                       <textarea  [(ngModel)]="propService.propSolution.thirdWhy" pInputTextarea cols="35" rows="5" class="textarea">
                        </textarea>
-                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.step2.selectedValue=='cause3'">
+                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.rootCause=='cause3'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
                             <label class="form-check-label text-light">
                                 Causa Raiz
@@ -161,9 +161,9 @@
                 <div class="d-flex justify-content-evenly">
                     <p-chip>4</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.step2.textAreas[0]" pInputTextarea cols="55" rows="5" class="textarea">
+                       <textarea  [(ngModel)]="propService.propSolution.quarterWhy" pInputTextarea cols="55" rows="5" class="textarea">
                        </textarea>
-                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.step2.selectedValue=='cause4'">
+                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.rootCause=='cause4'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
                             <label class="form-check-label text-light">
                                 Causa Raiz
@@ -172,9 +172,9 @@
                     </div>
                     <p-chip>5</p-chip>
                     <div>
-                       <textarea  [(ngModel)]="propService.step2.textAreas[0]" pInputTextarea cols="55" rows="5" class="textarea">
+                       <textarea  [(ngModel)]="propService.propSolution.fifthWhy" pInputTextarea cols="55" rows="5" class="textarea">
                        </textarea>
-                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.step2.selectedValue=='cause5'">
+                        <div class="text-center form-check caixa-preta mx-3" *ngIf="propService.propSolution.rootCause=='cause5'">
                             <input class="form-check-input" type="checkbox" value="" onclick="return false;" checked/>
                             <label class="form-check-label text-light">
                                 Causa Raiz
@@ -236,7 +236,7 @@
         </ng-template>
         <ng-template pTemplate="content">
             <div class="card">
-                <p-table [value]="propService.contacts">
+                <p-table [value]="propService.propSolution.contacts">
                     <ng-template pTemplate="header">
                         <tr>
                             <th>Nome</th>
