--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -12,7 +12,7 @@
     <div class="d-flex justify-content-end align-items-center mb-3">
 
         <a
-                href="/ncs/createProp"
+                href="/ncs/createProp/{{id}}"  
                 role="button"
                 class="btn btn-dark"
         >
@@ -31,7 +31,7 @@
 
 <div class="text-center">
     <a
-            href="/ncs/createProp"
+            href="/ncs/createProp/{{id}}"  
             role="button"
             class="btn btn-dark"
     >
