--- a/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="card">
-  <p-table [value]="propService.contacts">
+  <p-table [value]="propService.propSolution.contacts">
     <ng-template pTemplate="header">
       <tr>
         <th>Nome</th>
