conecta back com front sgq

--- a/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
@@ -7,7 +7,7 @@
 
 <div class="mt-4">
     <p-editor
-            [(ngModel)]="this.sgqServ.step4Text"
+            [(ngModel)]="this.sgqServ.sgq.textArea3"
             [style]="{ height: '50vh' }"
             [modules]="{counter: {container: '#counterCh',unit: 'character'}}"
     ></p-editor>
