--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -9,7 +9,7 @@
     <div class="">
         <p-editor
                 [style]="{ height: '210px', width: '700px' }"
-                [(ngModel)]="sgqServ.step2Text"
+                [(ngModel)]="sgqServ.sgq.textArea1"
                 [modules]="{counter: {container: '#counterEv',unit: 'character'}}"
         ></p-editor>
         <div id="counterEv" class="text-end">0</div>
