--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="card">
-    <p-table [value]="sgqServ.step1">
+    <p-table [value]="sgqServ.sgq.recurrence||[]">
         <ng-template pTemplate="header">
             <tr>
                 <th>Número</th>
