--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -24,7 +24,7 @@
                 Dados da NC
                 <i class="bi bi-file-earmark-medical"></i>
             </button>
-            <button type="button" class="btn btn-dark mr-2">
+            <button type="button" class="btn btn-dark mr-2" (click)="salvarSGQ()">
                 Salvar
                 <i class="pi pi-save"></i>
             </button>
