--- a/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
@@ -7,7 +7,7 @@
 
 <div class="mt-4">
     <p-editor
-            [(ngModel)]="this.sgqServ.step3Text"
+            [(ngModel)]="this.sgqServ.sgq.textArea2"
             [style]="{ height: '50vh' }"
             [modules]="{counter: {container: '#counterRc',unit: 'character'}}"
     ></p-editor>
