--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -2,7 +2,7 @@
 <div class="header-create-nc">
   <div class="p-0">
     <div class="d-flex">
-      <button type="button" class="btn btn-dark" (click)="salvarNc()" routerLink="/ncs">
+      <button type="button" class="btn btn-dark" (click)="salvarNc('home')">
         <i class="pi pi-home"></i>
         Início
       </button>
@@ -17,7 +17,7 @@
         Cancelar
         <i class="pi pi-times"></i>
       </button>
-      <button type="button" class="btn btn-dark mr-2" (click)="salvarNc()" routerLink="/ncs">
+      <button type="button" class="btn btn-dark mr-2" (click)="salvarNc('save')">
         Salvar
         <i class="pi pi-save"></i>
       </button>
