reset msg depois de exibida

--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -81,6 +81,7 @@ currentPageReportTemplate="Exibindo de {first} a {last} de {totalRecords} regist
           <span *ngSwitchCase="'late'"> Atrasada</span>
           <span *ngSwitchCase="'deleted'"> Deletada</span>
           <span *ngSwitchCase="'archived'"> Arquivada</span>
+          <span *ngSwitchCase="'canceled'"> Cancelada</span>
         </span>
       </td>
 
