Adicionando confirm quando deletado item da lista

--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -1,3 +1,4 @@
+<p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
 <p-toast key="myKey2"></p-toast>
 <p class="title">Início</p>
 <p class="subtitle">Visualize ou crie não conformidades</p>
